修复了文字输入模式回车键无法发送的bug，修复了女性患者的专属问题没有询问的bug，修复了json文件无法正常传入患者数据的bug，修复了连续回答不相关问题时无法正常播放问诊视频的bug

--- a/pages/consult/consult.wxml
+++ b/pages/consult/consult.wxml
@@ -131,7 +131,7 @@
           disabled="{{isInputDisabled || isConsultFinished}}"
           maxlength="500"
           auto-height
-          show-confirm-bar="{{!isInputDisabled && !isConsultFinished && inputText.trim()}}"
+          show-confirm-bar="true"
           confirm-type="send"
         />
         <text class="char-count">{{inputText.length}}/500</text>
